--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.49_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "sn56.49:0.3": "49. Sineru, der König der Berge (1) ",
   "sn56.49:1.1": "„Mönche und Nonnen, angenommen, jemand würde sieben Kieselsteine in der Größe von Mungobohnen auf Sineru, den König der Berge, legen. ",
   "sn56.49:1.2": "Was meint ihr, Mönche und Nonnen? ",
-  "sn56.49:1.3": "Was ist mehr: Sieben Kieselsteine in der Größe von Mungobohnen? Oder Sineru, der König der Berge?“ ",
+  "sn56.49:1.3": "Was ist mehr: sieben Kieselsteine in der Größe von Mungobohnen? Oder Sineru, der König der Berge?“ ",
   "sn56.49:1.4": "„Herr, Sineru, der König der Berge, ist sicherlich mehr. ",
   "sn56.49:1.5": "Die sieben Kieselsteine in der Größe von Mungobohnen sind winzig. ",
   "sn56.49:1.6": "Verglichen mit Sineru zählen sie nicht, da ist kein Vergleich, sie sind nicht einen Bruchteil wert.“ ",
