--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.51_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn56.51:0.3": "51. Ein Fingernagel ",
   "sn56.51:1.1": "Da nahm der Buddha ein wenig Erde mit seinem Fingernagel auf und wandte sich an die Mönche und Nonnen: ",
   "sn56.51:1.2": "„Was denkt ihr, Mönche und Nonnen? ",
-  "sn56.51:1.3": "Was ist mehr: der Teil von Sineru, dem König der Berge, der abgetragen und weggespült wurde, oder die verbliebenen sieben senfkorngroßen Kieselsteine?“ "
+  "sn56.51:1.3": "Was ist mehr: das bisschen Erde unter meinem Fingernagel oder diese große Erde?“ "
 }
