--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.51_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.51_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn56.51:1.2": "„Was denkt ihr, Mönche und Nonnen? ",
   "sn56.51:1.3": "Was ist mehr: das bisschen Erde unter meinem Fingernagel oder diese große Erde?“ ",
   "sn56.51:1.4": "„Herr, die große Erde ist sicherlich mehr. Das bisschen Erde unter deinem Fingernagel ist winzig. ",
-  "sn56.51:1.5": "Verglichen mit der großen Erde zählt es nicht, da ist kein Vergleich, es ist nicht einen Bruchteil wert.“ "
+  "sn56.51:1.5": "Verglichen mit der großen Erde zählt es nicht, da ist kein Vergleich, es ist nicht einen Bruchteil wert.“ ",
+  "sn56.51:1.6": "„Ebenso ist für einen edlen Schüler, der die Ansicht vervollkommnet hat, für einen Menschen, der sie erfasst hat, das Leiden, das vorbei und erledigt ist, viel mehr, und was übrig bleibt, ist winzig. "
 }
