--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn56.52:0.1": "Verbundene Lehrreden 56 "
+  "sn56.52:0.1": "Verbundene Lehrreden 56 ",
+  "sn56.52:0.2": "6. Über das Erfassen "
 }
