Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.52:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.52:0.2": "6. Über das Erfassen "
+  "sn56.52:0.2": "6. Über das Erfassen ",
+  "sn56.52:0.3": "52. Ein Lotusteich "
 }
