--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -682,6 +682,7 @@
   "sn-name:2054.sn56.50": "Sineru, der König der Berge (2) ",
   "sn-name:2055.sn56-abhisamayavagga": "Über das Erfassen ",
   "sn-name:2056.sn56.51": "Ein Fingernagel ",
+  "sn-name:2057.sn56.52": "Ein Lotusteich ",
   "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
