--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn56.52:0.3": "52. Ein Lotusteich ",
   "sn56.52:1.1": "„Mönche und Nonnen, angenommen, da wäre ein Lotusteich, der fünfzig Meilen lang, fünfzig Meilen breit und fünfzig Meilen tief wäre, randvoll mit Wasser, sodass eine Krähe daraus trinken könnte. ",
   "sn56.52:1.2": "Da käme ein Mensch und würde mit der Spitze eines Grashalms etwas Wasser entnehmen. ",
-  "sn56.52:1.3": "Was meint ihr, Mönche und Nonnen? "
+  "sn56.52:1.3": "Was meint ihr, Mönche und Nonnen? ",
+  "sn56.52:1.4": "Was ist mehr: das Wasser auf der Spitze des Grashalms oder das Wasser in dem Lotusteich?“ "
 }
