--- a/translation/it/giovannizappa/sutta/mn/mn6_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn6_translation-it-giovannizappa.json
@@ -3,7 +3,7 @@
   "mn6:0.2": "Se Uno Desidera",
   "mn6:1.1": "Così ho sentito.",
   "mn6:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
-  "mn6:1.3": "Lì il Buddha si rivolse ai mendicanti,",
+  "mn6:1.3": "Lì il Buddha si rivolse ai mendicanti:",
   "mn6:1.4": "“Mendicanti!”",
   "mn6:1.6": "Il Buddha disse:",
   "mn6:2.1": "“Mendicanti, vivete in linea con i precetti etici ed il codice monastico. Vivete con controllo basato sul codice monastico, comportandovi bene e cercando elemosina in posti adatti.",
