--- a/translation/it/giovannizappa/sutta/mn/mn7_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn7_translation-it-giovannizappa.json
@@ -3,7 +3,7 @@
   "mn7:0.2": "La Similitudine del Tessuto",
   "mn7:1.1": "Così ho sentito.",
   "mn7:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
-  "mn7:1.3": "Lì il Buddha si rivolse ai mendicanti,",
+  "mn7:1.3": "Lì il Buddha si rivolse ai mendicanti:",
   "mn7:1.4": "“Mendicanti!”",
   "mn7:1.5": "“Venerabile Signore,” risposero i mendicanti.",
   "mn7:1.6": "Il Buddha disse:",
