Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn10_translation-it-giovannizappa.json
@@ -3,7 +3,7 @@
   "mn10:0.2": "Discorso sulle Basi della Presenza Mentale",
   "mn10:1.1": "Così ho sentito.",
   "mn10:1.2": "Una volta il Buddha si trovava nella terra dei Kuru, vicino alla città Kuru chiamata Kammāsadamma.",
-  "mn10:1.3": "Lì il Buddha si rivolse ai mendicanti,",
+  "mn10:1.3": "Lì il Buddha si rivolse ai mendicanti:",
   "mn10:1.4": "“Mendicanti!”",
   "mn10:1.5": "“Venerabile Signore,” risposero i mendicanti.",
   "mn10:1.6": "Il Buddha disse:",
