--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -3,5 +3,5 @@
   "mn19:0.2": "Due Tipi di Pensieri",
   "mn19:1.1": "Così ho sentito.",
   "mn19:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
-  "mn19:1.3": "Lì il Buddha si rivolse ai mendicanti,"
+  "mn19:1.3": "Lì il Buddha si rivolse ai mendicanti:"
 }
