--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -4,5 +4,6 @@
   "mn19:1.1": "Così ho sentito.",
   "mn19:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
   "mn19:1.3": "Lì il Buddha si rivolse ai mendicanti:",
-  "mn19:1.4": "“Mendicanti!”"
+  "mn19:1.4": "“Mendicanti!”",
+  "mn19:1.5": "“Venerabile Signore,” risposero i mendicanti."
 }
