Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.52_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn56.52:1.4": "Was ist mehr: das Wasser auf der Spitze des Grashalms oder das Wasser in dem Lotusteich?“ ",
   "sn56.52:1.5": "„Herr, das Wasser in dem Lotusteich ist sicherlich mehr. Der Wassertropfen auf der Spitze des Grashalms ist winzig. ",
   "sn56.52:1.6": "Verglichen mit dem Wasser im Lotusteich zählt es nicht, da ist kein Vergleich, es ist nicht einen Bruchteil wert.“ ",
-  "sn56.52:1.7": "„Ebenso ist für einen edlen Schüler … "
+  "sn56.52:1.7": "„Ebenso ist für einen edlen Schüler … ",
+  "sn56.52:1.8": "Aus diesem Grund solltet ihr Meditation üben …“ "
 }
