--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -6,5 +6,6 @@
   "mn19:1.3": "Lì il Buddha si rivolse ai mendicanti:",
   "mn19:1.4": "“Mendicanti!”",
   "mn19:1.5": "“Venerabile Signore,” risposero i mendicanti.",
-  "mn19:1.6": "Il Buddha disse:"
+  "mn19:1.6": "Il Buddha disse:",
+  "mn19:2.1": "“Mendicanti, prima del mio risveglio—quando non ero ancora risvegliato ma ero alla ricerca del risveglio—ho pensato:"
 }
