--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -8,5 +8,6 @@
   "mn19:1.5": "“Venerabile Signore,” risposero i mendicanti.",
   "mn19:1.6": "Il Buddha disse:",
   "mn19:2.1": "“Mendicanti, prima del mio risveglio—quando non ero ancora risvegliato ma ero alla ricerca del risveglio—ho pensato:",
-  "mn19:2.2": "‘Perché non medito dividendo continuamente i miei pensieri i due categorie?’"
+  "mn19:2.2": "‘Perché non medito dividendo continuamente i miei pensieri i due categorie?’",
+  "mn19:2.3": "Quindi ho assegnato pensieri sensuali, malvagi, e crudeli"
 }
