Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -10,5 +10,6 @@
   "mn19:2.1": "“Mendicanti, prima del mio risveglio—quando non ero ancora risvegliato ma ero alla ricerca del risveglio—ho pensato:",
   "mn19:2.2": "‘Perché non medito dividendo continuamente i miei pensieri i due categorie?’",
   "mn19:2.3": "Quindi ho assegnato pensieri sensuali, malvagi, e crudeli",
-  "mn19:2.4": "ad una categoria."
+  "mn19:2.4": "ad una categoria.",
+  "mn19:2.5": "E ho assegnato pensieri di rinuncia, gentilezza, ed innocuità"
 }
