--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -11,5 +11,6 @@
   "mn19:2.2": "‘Perché non medito dividendo continuamente i miei pensieri i due categorie?’",
   "mn19:2.3": "Quindi ho assegnato pensieri sensuali, malvagi, e crudeli",
   "mn19:2.4": "ad una categoria.",
-  "mn19:2.5": "E ho assegnato pensieri di rinuncia, gentilezza, ed innocuità"
+  "mn19:2.5": "E ho assegnato pensieri di rinuncia, gentilezza, ed innocuità",
+  "mn19:2.6": "alla seconda categoria."
 }
