Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -12,5 +12,6 @@
   "mn19:2.3": "Quindi ho assegnato pensieri sensuali, malvagi, e crudeli",
   "mn19:2.4": "ad una categoria.",
   "mn19:2.5": "E ho assegnato pensieri di rinuncia, gentilezza, ed innocuità",
-  "mn19:2.6": "alla seconda categoria."
+  "mn19:2.6": "alla seconda categoria.",
+  "mn19:3.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero sensuale sorse."
 }
