--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -14,5 +14,6 @@
   "mn19:2.5": "E ho assegnato pensieri di rinuncia, gentilezza, ed innocuità",
   "mn19:2.6": "alla seconda categoria.",
   "mn19:3.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero sensuale sorse.",
-  "mn19:3.2": "Ho capito:"
+  "mn19:3.2": "Ho capito:",
+  "mn19:3.3": "‘Questo pensiero sensuale è sorto in me."
 }
