--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -19,5 +19,6 @@
   "mn19:3.4": "Porta al mio male, al male degli altri, ed al male di entrambi. Blocca la saggezza, è dal lato dell'angoscia, e non porta all'estinzione.’",
   "mn19:3.5": "Nel riflettere che portava al mio male, se ne andò.",
   "mn19:3.6": "Nel riflettere che portava al male degli altri, se ne andò.",
-  "mn19:3.7": "Nel riflettere che portava al male di entrambi, se ne andò."
+  "mn19:3.7": "Nel riflettere che portava al male di entrambi, se ne andò.",
+  "mn19:3.8": "Nel riflettere che bloccava la saggezza, era dal lato dell'angoscia, e non portava all'estinzione, se ne andò."
 }
