Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn19:3.8": "Nel riflettere che bloccava la saggezza, era dal lato dell'angoscia, e non portava all'estinzione, se ne andò.",
   "mn19:3.9": "Quindi ho abbandonato, mi sono liberato, ed ho eliminato qualsiasi pensiero sensuale che sorgeva.",
   "mn19:4-5.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero maligno sorse …",
-  "mn19:4-5.2": "un pensiero crudele sorse."
+  "mn19:4-5.2": "un pensiero crudele sorse.",
+  "mn19:4-5.3": "Ho capito:"
 }
