--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -26,5 +26,6 @@
   "mn19:4-5.2": "un pensiero crudele sorse.",
   "mn19:4-5.3": "Ho capito:",
   "mn19:4-5.4": "‘Questo pensiero crudele è sorto in me.",
-  "mn19:4-5.5": "Porta al mio male, al male degli altri, ed al male di entrambi. Blocca la saggezza, è dal lato dell'angoscia, e non porta all'estinzione.’"
+  "mn19:4-5.5": "Porta al mio male, al male degli altri, ed al male di entrambi. Blocca la saggezza, è dal lato dell'angoscia, e non porta all'estinzione.’",
+  "mn19:4-5.6": "Nel riflettere che portava al mio male …"
 }
