--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -28,5 +28,6 @@
   "mn19:4-5.4": "‘Questo pensiero crudele è sorto in me.",
   "mn19:4-5.5": "Porta al mio male, al male degli altri, ed al male di entrambi. Blocca la saggezza, è dal lato dell'angoscia, e non porta all'estinzione.’",
   "mn19:4-5.6": "Nel riflettere che portava al mio male …",
-  "mn19:4-5.7": "al male degli altri …"
+  "mn19:4-5.7": "al male degli altri …",
+  "mn19:4-5.8": "ed al male di entrambi, se ne andò."
 }
