--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -30,5 +30,6 @@
   "mn19:4-5.6": "Nel riflettere che portava al mio male …",
   "mn19:4-5.7": "al male degli altri …",
   "mn19:4-5.8": "e al male di entrambi, se ne andò.",
-  "mn19:4-5.9": "Nel riflettere che bloccava la saggezza, era dal lato dell'angoscia, e non portava all'estinzione, se ne andò."
+  "mn19:4-5.9": "Nel riflettere che bloccava la saggezza, era dal lato dell'angoscia, e non portava all'estinzione, se ne andò.",
+  "mn19:4-5.10": "Quindi ho abbandonato, mi sono liberato, ed ho eliminato qualsiasi pensiero crudele che sorgeva."
 }
