Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -31,5 +31,6 @@
   "mn19:4-5.7": "al male degli altri …",
   "mn19:4-5.8": "e al male di entrambi, se ne andò.",
   "mn19:4-5.9": "Nel riflettere che bloccava la saggezza, era dal lato dell'angoscia, e non portava all'estinzione, se ne andò.",
-  "mn19:4-5.10": "Quindi ho abbandonato, mi sono liberato, ed ho eliminato qualsiasi pensiero crudele che sorgeva."
+  "mn19:4-5.10": "Quindi ho abbandonato, mi sono liberato, ed ho eliminato qualsiasi pensiero crudele che sorgeva.",
+  "mn19:6.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente."
 }
