--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -34,5 +34,6 @@
   "mn19:4-5.10": "Quindi ho abbandonato, mi sono liberato, ed ho eliminato qualsiasi pensiero crudele che sorgeva.",
   "mn19:6.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente.",
   "mn19:6.2": "Se fa e considera pensieri sensuali, ha abbandonato il pensiero della rinuncia per coltivare il pensiero sensuale. La propria mente si inclina verso pensieri sensuali.",
-  "mn19:6.3": "Se fa e considera pensieri maligni … la propria mente si inclina verso pensieri maligni."
+  "mn19:6.3": "Se fa e considera pensieri maligni … la propria mente si inclina verso pensieri maligni.",
+  "mn19:6.4": "Se fa e considera pensieri crudeli … la propria mente si inclina verso pensieri crudeli."
 }
