--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -35,5 +35,6 @@
   "mn19:6.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente.",
   "mn19:6.2": "Se fa e considera pensieri sensuali, ha abbandonato il pensiero della rinuncia per coltivare il pensiero sensuale. La propria mente si inclina verso pensieri sensuali.",
   "mn19:6.3": "Se fa e considera pensieri maligni … la propria mente si inclina verso pensieri maligni.",
-  "mn19:6.4": "Se fa e considera pensieri crudeli … la propria mente si inclina verso pensieri crudeli."
+  "mn19:6.4": "Se fa e considera pensieri crudeli … la propria mente si inclina verso pensieri crudeli.",
+  "mn19:7.1": "Immaginate sia l'ultimo mese della stagione delle piogge, quando i raccolti crescono vicini l'uno all'altro, ed un pastore deve fare attenzione al bestiame."
 }
