--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -39,5 +39,6 @@
   "mn19:7.1": "Immaginate sia l'ultimo mese della stagione delle piogge, quando i raccolti crescono vicini l'uno all'altro, ed un pastore deve fare attenzione al bestiame.",
   "mn19:7.2": "Li toccherebbe e stuzzicherebbe con il proprio bastone su questo o quel lato per tenerli in riga.",
   "mn19:7.3": "Perché questo?",
-  "mn19:7.4": "Perché vede che se andassero contro i raccolti  lui potrebbe venire giustiziato, imprigionato, multato, o condannato."
+  "mn19:7.4": "Perché vede che se andassero contro i raccolti  lui potrebbe venire giustiziato, imprigionato, multato, o condannato.",
+  "mn19:7.5": "Allo stesso modo, io ho visto che le qualità malsane hanno gli svantaggi della sordidezza e corruzione, e che le qualità sane hanno il beneficio e potere purificante della rinuncia."
 }
