Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -40,5 +40,6 @@
   "mn19:7.2": "Li toccherebbe e stuzzicherebbe con il proprio bastone su questo o quel lato per tenerli in riga.",
   "mn19:7.3": "Perché questo?",
   "mn19:7.4": "Perché vede che se andassero contro i raccolti  lui potrebbe venire giustiziato, imprigionato, multato, o condannato.",
-  "mn19:7.5": "Allo stesso modo, io ho visto che le qualità malsane hanno gli svantaggi della sordidezza e corruzione, e che le qualità sane hanno il beneficio e potere purificante della rinuncia."
+  "mn19:7.5": "Allo stesso modo, io ho visto che le qualità malsane hanno gli svantaggi della sordidezza e corruzione, e che le qualità sane hanno il beneficio e potere purificante della rinuncia.",
+  "mn19:8.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero di rinuncia sorse."
 }
