--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -43,5 +43,6 @@
   "mn19:7.5": "Allo stesso modo, io ho visto che le qualità malsane hanno gli svantaggi della sordidezza e corruzione, e che le qualità sane hanno il beneficio e potere purificante della rinuncia.",
   "mn19:8.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero di rinuncia sorse.",
   "mn19:8.2": "Ho capito:",
-  "mn19:8.3": "‘Questo pensiero di rinuncia è sorto in me."
+  "mn19:8.3": "‘Questo pensiero di rinuncia è sorto in me.",
+  "mn19:8.4": "Non porta al mio male, al male degli altri, o al male di entrambi. Nutre la saggezza, è dal lato della libertà dall'angoscia, e porta all'estinzione.’"
 }
