--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn19:8.2": "Ho capito:",
   "mn19:8.3": "‘Questo pensiero di rinuncia è sorto in me.",
   "mn19:8.4": "Non porta al mio male, al male degli altri, o al male di entrambi. Nutre la saggezza, è dal lato della libertà dall'angoscia, e porta all'estinzione.’",
-  "mn19:8.5": "Se dovessi pensarlo e considerarlo tutta notte …"
+  "mn19:8.5": "Se dovessi pensarlo e considerarlo tutta notte …",
+  "mn19:8.6": "tutto il giorno …"
 }
