--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -49,5 +49,6 @@
   "mn19:8.6": "tutto il giorno …",
   "mn19:8.7": "tutta notte e tutto i giorno, non vedo pericolo che verrebbe da ciò.",
   "mn19:8.8": "Però, pensare e considerare troppo stancherebbe il mio corpo.",
-  "mn19:8.9": "E quando il corpo è stanco, la mente è stressata."
+  "mn19:8.9": "E quando il corpo è stanco, la mente è stressata.",
+  "mn19:8.10": "E quando la mente è stressata, è lontana dal raccoglimento mentale."
 }
