--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -53,5 +53,6 @@
   "mn19:8.10": "E quando la mente è stressata, è lontana dal raccoglimento mentale.",
   "mn19:8.11": "Allora ho calmato, unificato, e raccolto la mia mente internamente.",
   "mn19:8.12": "Perché questo?",
-  "mn19:8.13": "Affinché la mia mente non fosse stressata."
+  "mn19:8.13": "Affinché la mia mente non fosse stressata.",
+  "mn19:9-10.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero gentile sorse …"
 }
