Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -55,5 +55,6 @@
   "mn19:8.12": "Perché questo?",
   "mn19:8.13": "Affinché la mia mente non fosse stressata.",
   "mn19:9-10.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero gentile sorse …",
-  "mn19:9-10.2": "un pensiero innocente sorse."
+  "mn19:9-10.2": "un pensiero innocente sorse.",
+  "mn19:9-10.3": "Ho capito:"
 }
