--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -56,5 +56,6 @@
   "mn19:8.13": "Affinché la mia mente non fosse stressata.",
   "mn19:9-10.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero gentile sorse …",
   "mn19:9-10.2": "un pensiero innocente sorse.",
-  "mn19:9-10.3": "Ho capito:"
+  "mn19:9-10.3": "Ho capito:",
+  "mn19:9-10.4": "‘Questo pensiero gentile è sorto in me."
 }
