--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -57,5 +57,6 @@
   "mn19:9-10.1": "Poi, mentre meditavo—diligente, entusiasta, e risoluto—un pensiero gentile sorse …",
   "mn19:9-10.2": "un pensiero innocente sorse.",
   "mn19:9-10.3": "Ho capito:",
-  "mn19:9-10.4": "‘Questo pensiero gentile è sorto in me."
+  "mn19:9-10.4": "‘Questo pensiero gentile è sorto in me.",
+  "mn19:9-10.5": "Non porta al mio male, al male degli altri, o al male di entrambi. Nutre la saggezza, è dal lato della libertà dall'angoscia, e porta all'estinzione.’"
 }
