Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -59,5 +59,6 @@
   "mn19:9-10.3": "Ho capito:",
   "mn19:9-10.4": "‘Questo pensiero gentile è sorto in me.",
   "mn19:9-10.5": "Non porta al mio male, al male degli altri, o al male di entrambi. Nutre la saggezza, è dal lato della libertà dall'angoscia, e porta all'estinzione.’",
-  "mn19:9-10.6": "Se dovessi pensarlo e considerarlo tutta notte …"
+  "mn19:9-10.6": "Se dovessi pensarlo e considerarlo tutta notte …",
+  "mn19:9-10.7": "tutto il giorno …"
 }
