--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -61,5 +61,6 @@
   "mn19:9-10.5": "Non porta al mio male, al male degli altri, o al male di entrambi. Nutre la saggezza, è dal lato della libertà dall'angoscia, e porta all'estinzione.’",
   "mn19:9-10.6": "Se dovessi pensarlo e considerarlo tutta notte …",
   "mn19:9-10.7": "tutto il giorno …",
-  "mn19:9-10.8": "tutta notte e tutto i giorno, non vedo pericolo che verrebbe da ciò."
+  "mn19:9-10.8": "tutta notte e tutto i giorno, non vedo pericolo che verrebbe da ciò.",
+  "mn19:9-10.9": "Però, pensare e considerare troppo stancherebbe il mio corpo."
 }
