--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -62,5 +62,6 @@
   "mn19:9-10.6": "Se dovessi pensarlo e considerarlo tutta notte …",
   "mn19:9-10.7": "tutto il giorno …",
   "mn19:9-10.8": "tutta notte e tutto i giorno, non vedo pericolo che verrebbe da ciò.",
-  "mn19:9-10.9": "Però, pensare e considerare troppo stancherebbe il mio corpo."
+  "mn19:9-10.9": "Però, pensare e considerare troppo stancherebbe il mio corpo.",
+  "mn19:9-10.10": "E quando il corpo è stanco, la mente è stressata."
 }
