--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -64,5 +64,6 @@
   "mn19:9-10.8": "tutta notte e tutto i giorno, non vedo pericolo che verrebbe da ciò.",
   "mn19:9-10.9": "Però, pensare e considerare troppo stancherebbe il mio corpo.",
   "mn19:9-10.10": "E quando il corpo è stanco, la mente è stressata.",
-  "mn19:9-10.11": "E quando la mente è stressata, è lontana dal raccoglimento mentale."
+  "mn19:9-10.11": "E quando la mente è stressata, è lontana dal raccoglimento mentale.",
+  "mn19:9-10.12": "Allora ho calmato, unificato, e raccolto la mia mente internamente."
 }
