Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -66,5 +66,6 @@
   "mn19:9-10.10": "E quando il corpo è stanco, la mente è stressata.",
   "mn19:9-10.11": "E quando la mente è stressata, è lontana dal raccoglimento mentale.",
   "mn19:9-10.12": "Allora ho calmato, unificato, e raccolto la mia mente internamente.",
-  "mn19:9-10.13": "Perché questo?"
+  "mn19:9-10.13": "Perché questo?",
+  "mn19:9-10.14": "Affinché la mia mente non fosse stressata."
 }
