--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -67,5 +67,6 @@
   "mn19:9-10.11": "E quando la mente è stressata, è lontana dal raccoglimento mentale.",
   "mn19:9-10.12": "Allora ho calmato, unificato, e raccolto la mia mente internamente.",
   "mn19:9-10.13": "Perché questo?",
-  "mn19:9-10.14": "Affinché la mia mente non fosse stressata."
+  "mn19:9-10.14": "Affinché la mia mente non fosse stressata.",
+  "mn19:11.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente."
 }
