--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -68,5 +68,6 @@
   "mn19:9-10.12": "Allora ho calmato, unificato, e raccolto la mia mente internamente.",
   "mn19:9-10.13": "Perché questo?",
   "mn19:9-10.14": "Affinché la mia mente non fosse stressata.",
-  "mn19:11.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente."
+  "mn19:11.1": "Ogni cosa che un mendicante pensa e considera frequentemente diventa l'inclinazione della propria mente.",
+  "mn19:11.2": "Se fa e considera pensieri di rinuncia, ha abbandonato il pensiero sensuale per coltivare il pensiero della rinuncia. La propria mente si inclina verso pensieri di rinuncia."
 }
