--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -72,5 +72,6 @@
   "mn19:11.2": "Se fa e considera pensieri di rinuncia, ha abbandonato il pensiero sensuale per coltivare il pensiero della rinuncia. La propria mente si inclina verso pensieri di rinuncia.",
   "mn19:11.3": "Se fa e considera pensieri gentili … la propria mente si inclina verso pensieri gentili.",
   "mn19:11.4": "Se fa e considera pensieri innocui … la propria mente si inclina verso pensieri innocui.",
-  "mn19:12.1": "Immaginate sia l'ultimo mese dell'estate, quando i raccolti sono stati raggruppati dal villaggio, ed un pastore deve fare attenzione al bestiame. Mentre rimane alla radice di un albero o all'aria aperta deve solamente tenere presente che"
+  "mn19:12.1": "Immaginate sia l'ultimo mese dell'estate, quando i raccolti sono stati raggruppati dal villaggio, ed un pastore deve fare attenzione al bestiame. Mentre rimane alla radice di un albero o all'aria aperta deve solamente tenere presente che",
+  "mn19:12.2": "il bestiame è lì."
 }
