Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -75,5 +75,6 @@
   "mn19:12.1": "Immaginate sia l'ultimo mese dell'estate, quando i raccolti sono stati raggruppati dal villaggio, ed un pastore deve fare attenzione al bestiame. Mentre rimane alla radice di un albero o all'aria aperta deve solamente tenere presente che",
   "mn19:12.2": "il bestiame è lì.",
   "mn19:12.3": "Allo stesso modo io dovevo solamente tenere presente che",
-  "mn19:12.4": "quelle cose erano lì."
+  "mn19:12.4": "quelle cose erano lì.",
+  "mn19:13.1": "La mia energia era attiva e infaticabile, la mia presenza mentale era stabile e lucida, il mio corpo era tranquillo e indisturbato, e la mia mente era raccolta."
 }
