--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -76,5 +76,6 @@
   "mn19:12.2": "il bestiame è lì.",
   "mn19:12.3": "Allo stesso modo io dovevo solamente tenere presente che",
   "mn19:12.4": "quelle cose erano lì.",
-  "mn19:13.1": "La mia energia era attiva e infaticabile, la mia presenza mentale era stabile e lucida, il mio corpo era tranquillo e indisturbato, e la mia mente era raccolta."
+  "mn19:13.1": "La mia energia era attiva e infaticabile, la mia presenza mentale era stabile e lucida, il mio corpo era tranquillo e indisturbato, e la mia mente era raccolta.",
+  "mn19:14.1": "Abbastanza appartato dai piaceri dei sensi, appartato da qualità malsane, sono entrato e sono rimasto nel primo stadio di meditazione, con estasi e gioia nati dall'isolamento, con inclinazione e sostentamento mentali."
 }
