Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -78,5 +78,6 @@
   "mn19:12.4": "quelle cose erano lì.",
   "mn19:13.1": "La mia energia era attiva e infaticabile, la mia presenza mentale era stabile e lucida, il mio corpo era tranquillo e indisturbato, e la mia mente era raccolta.",
   "mn19:14.1": "Abbastanza appartato dai piaceri dei sensi, appartato da qualità malsane, sono entrato e sono rimasto nel primo stadio di meditazione, con estasi e gioia nati dall'isolamento, con inclinazione e sostentamento mentali.",
-  "mn19:15.1": "Con il placarsi dell'inclinazione e sostentamento mentali, sono entrato e sono rimasto nel secondo stadio di meditazione, con estasi e gioia nate dal raccoglimento mentale, con chiarezza e fiducia interna, e mente unificata, senza inclinazione e sostentamento mentali."
+  "mn19:15.1": "Con il placarsi dell'inclinazione e sostentamento mentali, sono entrato e sono rimasto nel secondo stadio di meditazione, con estasi e gioia nate dal raccoglimento mentale, con chiarezza e fiducia interna, e mente unificata, senza inclinazione e sostentamento mentali.",
+  "mn19:16.1": "Con lo svanire dell'estasi, sono entrato e sono rimasto nel terzo stadio di meditazione, dove ho meditato con equanimità, presente e consapevole, facendo esperienza della gioia di cui i nobili dichiarano, ‘Equanime e presente, egli medita nella gioia.’"
 }
