--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -80,5 +80,6 @@
   "mn19:14.1": "Abbastanza appartato dai piaceri dei sensi, appartato da qualità malsane, sono entrato e sono rimasto nel primo stadio di meditazione, con estasi e gioia nati dall'isolamento, con inclinazione e sostentamento mentali.",
   "mn19:15.1": "Con il placarsi dell'inclinazione e sostentamento mentali, sono entrato e sono rimasto nel secondo stadio di meditazione, con estasi e gioia nate dal raccoglimento mentale, con chiarezza e fiducia interna, e mente unificata, senza inclinazione e sostentamento mentali.",
   "mn19:16.1": "Con lo svanire dell'estasi, sono entrato e sono rimasto nel terzo stadio di meditazione, dove ho meditato con equanimità, presente e consapevole, facendo esperienza della gioia di cui i nobili dichiarano, ‘Equanime e presente, egli medita nella gioia.’",
-  "mn19:17.1": "Abbandonando gioia e dolore, e mettendo fine a felicità e tristezza precedenti, sono entrato e sono rimasto nel quarto stadio di meditazione, senza piacere o dolore, con pura equanimità e presenza mentale."
+  "mn19:17.1": "Abbandonando gioia e dolore, e mettendo fine a felicità e tristezza precedenti, sono entrato e sono rimasto nel quarto stadio di meditazione, senza piacere o dolore, con pura equanimità e presenza mentale.",
+  "mn19:18.1": "Una volta che la mia mente è diventata così raccolta—purificata, luminosa, impeccabile, libera da corruzioni, flessibile, lavorabile, stabile, ed imperturbabile—l'ho estesa al ricordo delle vite passate."
 }
