Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -82,5 +82,6 @@
   "mn19:16.1": "Con lo svanire dell'estasi, sono entrato e sono rimasto nel terzo stadio di meditazione, dove ho meditato con equanimità, presente e consapevole, facendo esperienza della gioia di cui i nobili dichiarano, ‘Equanime e presente, egli medita nella gioia.’",
   "mn19:17.1": "Abbandonando gioia e dolore, e mettendo fine a felicità e tristezza precedenti, sono entrato e sono rimasto nel quarto stadio di meditazione, senza piacere o dolore, con pura equanimità e presenza mentale.",
   "mn19:18.1": "Una volta che la mia mente è diventata così raccolta—purificata, luminosa, impeccabile, libera da corruzioni, flessibile, lavorabile, stabile, ed imperturbabile—l'ho estesa al ricordo delle vite passate.",
-  "mn19:18.2": "Ho ricordato molti tipi di vite passate, con caratteristiche e dettagli."
+  "mn19:18.2": "Ho ricordato molti tipi di vite passate, con caratteristiche e dettagli.",
+  "mn19:19.1": "Questa è stata la prima conoscenza che ho raggiunto durante la prima parte della notte."
 }
