--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -83,5 +83,6 @@
   "mn19:17.1": "Abbandonando gioia e dolore, e mettendo fine a felicità e tristezza precedenti, sono entrato e sono rimasto nel quarto stadio di meditazione, senza piacere o dolore, con pura equanimità e presenza mentale.",
   "mn19:18.1": "Una volta che la mia mente è diventata così raccolta—purificata, luminosa, impeccabile, libera da corruzioni, flessibile, lavorabile, stabile, ed imperturbabile—l'ho estesa al ricordo delle vite passate.",
   "mn19:18.2": "Ho ricordato molti tipi di vite passate, con caratteristiche e dettagli.",
-  "mn19:19.1": "Questa è stata la prima conoscenza che ho raggiunto durante la prima parte della notte."
+  "mn19:19.1": "Questa è stata la prima conoscenza che ho raggiunto durante la prima parte della notte.",
+  "mn19:19.2": "L'ignoranza fu distrutta e la conoscenza sorse; l'oscurità fu distrutta e la luce sorse, come succede al meditatore diligente, entusiasta, e risoluto."
 }
