Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -93,5 +93,6 @@
   "mn19:22.2": "Ho capito com'è davvero: ‘Questa è la sofferenza’ ... ‘Questa è l'origine della sofferenza’ ... ‘Questa è la cessazione della sofferenza’ ... ‘Questa è la pratica che porta alla cessazione della sofferenza’.",
   "mn19:23.1": "Ho capito com'è davvero: ‘Questi sono i contaminanti’ ... ‘Questa è l'origine dei contaminanti’ ... ‘Questa è la cessazione dei contaminanti’ ... ‘Questa è la pratica che porta alla cessazione dei contaminanti’.",
   "mn19:23.2": "Conoscendo e vedendo così, la mia mente è stata liberata dai contaminanti della sensualità, del desiderio di continuare ad esistere, e dell'ignoranza.",
-  "mn19:23.3": "Ho capito: ‘La nascita è terminata, il cammino spirituale è stato completato, ciò che c'era da fare è stato fatto, non c'è più ritorno ad alcuno stato di esistenza.’"
+  "mn19:23.3": "Ho capito: ‘La nascita è terminata, il cammino spirituale è stato completato, ciò che c'era da fare è stato fatto, non c'è più ritorno ad alcuno stato di esistenza.’",
+  "mn19:24.1": "Questa è stata la terza conoscenza che ho raggiunto durante la parte finale della notte."
 }
