Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -96,5 +96,6 @@
   "mn19:23.3": "Ho capito: ‘La nascita è terminata, il cammino spirituale è stato completato, ciò che c'era da fare è stato fatto, non c'è più ritorno ad alcuno stato di esistenza.’",
   "mn19:24.1": "Questa è stata la terza conoscenza che ho raggiunto durante la parte finale della notte.",
   "mn19:24.2": "L'ignoranza fu distrutta e la conoscenza sorse; l'oscurità fu distrutta e la luce sorse, come succede al meditatore diligente, entusiasta, e risoluto.",
-  "mn19:25.1": "Immaginate che in una foresta ci sia una distesa di paludi,"
+  "mn19:25.1": "Immaginate che in una foresta ci sia una distesa di paludi,",
+  "mn19:25.2": "ed un grande branco di cervi viva lì vicino."
 }
