Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn19_translation-it-giovannizappa.json
@@ -107,6 +107,6 @@
   "mn19:26.1": "Ho inventato queste similitudine per illustrare un punto.",
   "mn19:26.2": "E questo è ciò che significa.",
   "mn19:26.3": "‘Una distesa di paludi’ è termine per i piaceri dei sensi.",
-  "mn19:26.4": "‘Una grande branco di cervi’ è termine per gli esseri viventi.",
+  "mn19:26.4": "‘Una grande branco di cervi’ sta per gli esseri viventi.",
   "mn19:26.5": "‘Una persona che vuole far loro del male, ferirli, e minacciarli’ è termine per Māra il Malvagio."
 }
