--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn20:0.1": "Discorsi Medi 20",
-  "mn20:0.2": "Calmare I Pensieri"
+  "mn20:0.2": "Calmare I Pensieri",
+  "mn20:1.1": "Così ho sentito."
 }
