Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -1,5 +1,6 @@
 {
   "mn20:0.1": "Discorsi Medi 20",
   "mn20:0.2": "Calmare I Pensieri",
-  "mn20:1.1": "Così ho sentito."
+  "mn20:1.1": "Così ho sentito.",
+  "mn20:2.1": "“Mendicanti, un mendicante dedito alla mente superiore deve dare attenzione a cinque caratteristiche di tanto in tanto."
 }
