Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -22,5 +22,6 @@
   "mn20:4.6": "Allo stesso modo, un mendicante … deve esaminare gli svantaggi in quei pensieri …",
   "mn20:5.1": "Ora, prendete un mendicante che sta esaminando gli svantaggi in quei pensieri, ma pensieri cattivi e malsani legati a desiderio, odio, e illusione continuano a venire a galla. Deve provare a ignorarli e dimenticarsene.",
   "mn20:5.2": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
-  "mn20:5.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
+  "mn20:5.3": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
+  "mn20:5.4": "Immaginate una persona con buona vista, e alcune viste sgradite entrano nel proprio campo visivo."
 }
