Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -36,5 +36,5 @@
   "mn20:6.8": "Allora rallenta.",
   "mn20:6.9": "Poi pensa:",
   "mn20:6.10": "‘Perché sto camminando lentamente?",
-  "mn20:6.11": "Perchè non rimango fermo in piedi?’"
+  "mn20:6.11": "Perché non rimango fermo in piedi?’"
 }
