Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -43,5 +43,6 @@
   "mn20:6.15": "Perché non mi siedo?’",
   "mn20:6.16": "Allora si siede.",
   "mn20:6.17": "Poi pensa:",
-  "mn20:6.18": "‘Perché sono seduto?"
+  "mn20:6.18": "‘Perché sono seduto?",
+  "mn20:6.19": "Perché non mi sdraio?’"
 }
