Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -46,5 +46,6 @@
   "mn20:6.18": "‘Perché sono seduto?",
   "mn20:6.19": "Perché non mi sdraio?’",
   "mn20:6.20": "Allora si sdraia.",
-  "mn20:6.21": "E quindi quella persona scarterebbe posture sempre più grossolane e adotterebbe posture più raffinate."
+  "mn20:6.21": "E quindi quella persona scarterebbe posture sempre più grossolane e adotterebbe posture più raffinate.",
+  "mn20:6.22": "Allo stesso modo, un mendicante … quei pensieri cattivi vengono abbandonati e finiscono …"
 }
