Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -56,5 +56,6 @@
   "mn20:7.6": "Allo stesso modo, un mendicante …",
   "mn20:7.7": "Stringendo i denti e premendo la lingua contro il palato, deve spremere, schiacciare, e torturare la mente con la mente.",
   "mn20:7.8": "Nel fare ciò, quei pensieri cattivi vengono abbandonati e finiscono.",
-  "mn20:7.9": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie."
+  "mn20:7.9": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
+  "mn20:8.1": "Ora, prendete un mendicante che sta dando attenzione ad una caratteristica che da origine a pensieri cattivi e malsani legati a desiderio, odio, e illusione. Dà attenzione ad un’altra caratteristica legata a ciò che è sano …"
 }
