Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -60,5 +60,6 @@
   "mn20:8.1": "Ora, prendete un mendicante che sta dando attenzione ad una caratteristica che da origine a pensieri cattivi e malsani legati a desiderio, odio, e illusione. Dà attenzione ad un’altra caratteristica legata a ciò che è sano …",
   "mn20:8.3": "Esamina gli svantaggi in quei pensieri …",
   "mn20:8.5": "Prova a ignorare e a dimenticarsi di quei pensieri …",
-  "mn20:8.7": "Si concentra a calmare la formazione di quei pensieri …"
+  "mn20:8.7": "Si concentra a calmare la formazione di quei pensieri …",
+  "mn20:8.9": "Stringendo i denti e premendo la lingua contro il palato, spreme, schiaccia, e tortura la mente con la mente. Nel riuscire a fare ognuna di queste cose, quei pensieri cattivi vengono abbandonati e finiscono."
 }
