Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn20_translation-it-giovannizappa.json
@@ -65,5 +65,6 @@
   "mn20:8.10": "La propria mente si calma internamente; si stabilisce, si unifica, e si raccoglie.",
   "mn20:8.11": "Questo si chiama un mendicante che ha padroneggiato le vie del pensiero.",
   "mn20:8.12": "Penserà quello che vuole pensare, e non penserà quello che non vuole pensare.",
-  "mn20:8.13": "Ha tagliato via la voglia, rotto le catene, e comprendendo correttamente la presunzione ha posto fine alla sofferenza.”"
+  "mn20:8.13": "Ha tagliato via la voglia, rotto le catene, e comprendendo correttamente la presunzione ha posto fine alla sofferenza.”",
+  "mn20:8.14": "Questo è ciò che il Buddha disse."
 }
