Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.55_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.55:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.55:0.2": "6. Über das Erfassen "
+  "sn56.55:0.2": "6. Über das Erfassen ",
+  "sn56.55:0.3": "55. Die Erde (1) "
 }
