Translations by sabbamitta to translation/de/site/name/sutta/sn-name_translation-de-site.json

--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -685,6 +685,7 @@
   "sn-name:2057.sn56.52": "Ein Lotusteich ",
   "sn-name:2058.sn56.53": "Wo Wassermassen zusammenfließen (1) ",
   "sn-name:2059.sn56.54": "Wo Wassermassen zusammenfließen (2) ",
+  "sn-name:2060.sn56.55": "Die Erde (1) ",
   "sn-name:2066.sn56-pathamaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide ",
   "sn-name:2077.sn56-dutiyaamakadhannapeyyalavagga": "Abgekürzte Texte über rohes Getreide (2) ",
   "sn-name:2078.sn56.71": "Lebende Geschöpfe töten ",
