Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -77,5 +77,6 @@
   "mn7:8.1": "Jam išmetus, išvarius, atsikračius tiek (teršalų), (nuo tiek) išsilaisvinus, (ir pamačius), kad jis turi patirtimi grįstą pasitikėjimą Buda, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
   "mn7:8.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia.",
   "mn7:9.1": "Jis turi patirtimi grįstą pasitikėjimą Mokymu …",
-  "mn7:10.1": "Jis turi patirtimi grįstą pasitikėjimą _saṅgha_, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas."
+  "mn7:10.1": "Jis turi patirtimi grįstą pasitikėjimą _saṅgha_, jį įkvepia (praktikos) prasmė, jį įkvepia Mokymas ir pripildo su Mokymu susijęs džiaugsmas.",
+  "mn7:10.2": "Kai, jis džiaugiasi, gimsta žavesys, kai, (jo) protas žavisi, nurimsta kūnas, kai jo kūnas nurimęs, jis patiria laimę, laimingojo gi protas susitelkia."
 }
