Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.57_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn56.57:0.1": "Verbundene Lehrreden 56 ",
-  "sn56.57:0.2": "6. Über das Erfassen "
+  "sn56.57:0.2": "6. Über das Erfassen ",
+  "sn56.57:0.3": "57. Das Weltmeer (1) "
 }
