Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -84,5 +84,6 @@
   "mn7:12.1": "Vienuoliai, jei tokios dorovės, tokių savybių, tokios išminties vienuolis valgo paaukotą maistą, kurį sudaro rinktiniai ryžiai kartu su įvairiomis sriubomis ir padažais, net ir tai jam nėra kliūtis.",
   "mn7:12.2": "Įsivaizduokite, vienuoliai, suterštą, dėmėtą drobę, kuri, (ją išplovus) tyru vandeniu, tampa švari, išvalyta; arba nevalytą auksą, kuris, (jį iškaitinus) krosnyje, tampa švariu, išvalytu.",
   "mn7:12.3": "Lygiai gi, vienuoliai, taip, kai tokios dorovės, tokių savybių, tokios išminties vienuolis valgo paaukotą maistą, kurį sudaro rinktiniai ryžiai kartu su įvairiomis sriubomis ir padažais, net ir tai jam nėra kliūtis.",
-  "mn7:13.1": "Jis gyvena aprėpęs geraširdiškumo sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs geraširdiškumo sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis."
+  "mn7:13.1": "Jis gyvena aprėpęs geraširdiškumo sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs geraširdiškumo sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis.",
+  "mn7:14.1": "Jis gyvena aprėpęs atjautos sklidinu protu …"
 }
