Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -86,5 +86,6 @@
   "mn7:12.3": "Lygiai gi, vienuoliai, taip, kai tokios dorovės, tokių savybių, tokios išminties vienuolis valgo paaukotą maistą, kurį sudaro rinktiniai ryžiai kartu su įvairiomis sriubomis ir padažais, net ir tai jam nėra kliūtis.",
   "mn7:13.1": "Jis gyvena aprėpęs geraširdiškumo sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs geraširdiškumo sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis.",
   "mn7:14.1": "Jis gyvena aprėpęs atjautos sklidinu protu …",
-  "mn7:15.1": "Jis gyvena aprėpęs džiaugsmo sklidinu protu …"
+  "mn7:15.1": "Jis gyvena aprėpęs džiaugsmo sklidinu protu …",
+  "mn7:16.1": "Jis gyvena aprėpęs lygiažiūros sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs lygiažiūros sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis."
 }
