Translations by Piyadassii to translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -87,5 +87,6 @@
   "mn7:13.1": "Jis gyvena aprėpęs geraširdiškumo sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs geraširdiškumo sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis.",
   "mn7:14.1": "Jis gyvena aprėpęs atjautos sklidinu protu …",
   "mn7:15.1": "Jis gyvena aprėpęs džiaugsmo sklidinu protu …",
-  "mn7:16.1": "Jis gyvena aprėpęs lygiažiūros sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs lygiažiūros sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis."
+  "mn7:16.1": "Jis gyvena aprėpęs lygiažiūros sklidinu protu vieną kryptį, taip pat ir antrą, ir trečią, ir ketvirtą. Taip jis gyvena aprėpęs lygiažiūros sklidinu, didžiuliu, didingu, beribiu protu, be neapykantos, be piktavališkumo visą pasaulį: viršų, apačią, šalis, visas kryptis.",
+  "mn7:17.1": "Jis supranta: „Yra šitai, yra tai, kas žemiau (už tai), yra tai, kas aukščiau. Yra išėjimas už (viso) šio suvokiamo (lauko ribų).”"
 }
